0.05

0.04 2014-09-05T00:49:24+02:00
 - Add 'readme_from' directive to Makefile.PL.
 - Fix LICENSE file.
 - Improve example in Error::Pure::Always doc to explicit set to default
   Error::Pure::TYPE.
 - Update Module::Install to 1.12 version.

0.03 2013-09-21
 - Add LICENSE file.
 - Add SIGNATURE file.
 - Add Test::NoWarnings to tests.
 - Add default error type.
 - Add dependency for perl (based on Error::Pure).
 - Add modules to SEE ALSO section in doc.
 - Rename CHANGES to Changes.
 - Rewrite Changes file to CPAN::Changes::SPEC format.
 - Update Error::Pure dependency to last version.

0.02 2012-06-19
 - Fix required modules.

0.01 2012-06-19
 - First version.