@@ -1,4 +1,5 @@
 0.05
+ - Update Module::Install to 1.14 version.
 
 0.04 2014-09-05T00:49:24+02:00
  - Add 'readme_from' directive to Makefile.PL.
